feat: add sendProposalResultMail

--- a/src/main/resources/static/proposalResultMail.html
+++ b/src/main/resources/static/proposalResultMail.html
@@ -50,23 +50,14 @@
     <div class="header">
         <img src="logo.svg" alt="Logo" width="100" />
         <h1>
-            {organizationName}님, {companyNamez에서 제휴(협찬) 제안이 왔어요!
+            {companyName}님, 제휴(협찬) 제안 결과가 왔어요!
         </h1>
     </div>
     <div class="body-content">
         <p>
-            <strong>{organizationName} 님, {companyName}(기업)</strong>
-            로부터 제휴(협찬) 제안이 도착했어요!
-            <br />
-            전달해주신 내용은 다음과 같아요
+            <strong>{companyName} 님, 제안 요청한 {organizationName}</strong>
+            로부터 제휴(협찬) 제안에 대해 {result}되었습니다.
         </p>
-        <p>
-            <strong>{message}</strong>
-        </p>
-        <div class="button-container">
-            <a href="http://localhost:3000/organization/1" class="button-link">게시한 글 확인하러 가기</a>
-            <a href="http://localhost:3000/organization/1" class="button-link">제휴 현황 확인하러 가기</a>
-        </div>
     </div>
 
     <div class="footer">
