feat: modify logic for company

--- a/src/main/resources/static/proposalMail.html
+++ b/src/main/resources/static/proposalMail.html
@@ -50,7 +50,7 @@
     <div class="header">
         <img src="logo.svg" alt="Logo" width="100" />
         <h1>
-            {organizationName}님, {companyNamez에서 제휴(협찬) 제안이 왔어요!
+            {organizationName}님, {companyName}에서 제휴(협찬) 제안이 왔어요!
         </h1>
     </div>
     <div class="body-content">
